--- a/index.html
+++ b/index.html
@@ -5,10 +5,44 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <center><h1>ONG ADOPTA UN PELUDO</h1>
+<body style="background-color: rgba(151, 132, 168, 0.397);">
+    <center>
+        <h1>ONG ADOPTA UN PELUDO</h1>
     </center>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+    
+    <h2>
+       <center> Ayudamos al cuidado y rehabilitación de perros y gatos en situación de calle</center>
+    </h2>
+
+    <h3>Nuestro equipo esta conformado por:</h3>
+    <ul>
+        <li>Juan Pérez: Patrocinador</li>
+        <li>Soledad Cancino: Veterinaria</li>
+        <li>Victoria Arce: Kinesióloga animal</li>
+    </ul>
+
+    <h3><b> Conoce a tu futuro compañer@ </b></h3>
+
+    <table border="1">
+        <tr>
+            <td>
+                 <img src="img/gatos.jpg" alt="" width="300" height="300">
+            </td>
+            <td>
+                <a href="gatos.html"> <b>GATITOS</b></a> 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/perros.jfif" alt="" width="300"height="300">
+            </td>
+            <td>
+               <a href="perros.html"> <b>PERRITOS</b></a> 
+            </td>
+        </tr>    
+        
+    </table>
 
 </body>
 </html>
